[package]
name = "bevy_flurx"
version = "0.5.0"
edition = "2021"
authors = ["elm"]
categories = ["asynchronous", "game-development"]
description = "Allows you to write sequential description of processes involving delays, user input, and other waits."
keywords = ["game", "gamedev", "bevy", "async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/not-elm/bevy_flurx"

[workspace]
exclude = ["benches"]

[[bench]]
name = "cmp_countup"
path = "benches/cmp_countup.rs"
harness = false

[[bench]]
name = "cmp_repeat_countup"
path = "benches/cmp_repeat_countup.rs"
harness = false

[[bench]]
name = "sequence"
path = "benches/sequence.rs"
harness = false

[[example]]
name = "effect"
path = "examples/effect.rs"
required-features = ["tokio"]

[[example]]
name = "switch_just_change"
path = "examples/bug_check/switch_just_change.rs"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["multi-threaded"] }
flurx = { version = "0.1.5" }
futures-polling = "0.1.1"
pollster = "0.3.0"
tokio = { version = "1.37.0", optional = true, features = ["sync"] }
futures-lite = "2.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = { version = "0.2.3", optional = true }

[dev-dependencies]
bevy = { version = "0.13.2" }
bevy_test_helper = { git = "https://github.com/not-elm/bevy_test_helper" }
reqwest = "0.12.4"
futures = "0.3.30"
criterion = { version = "0.5.1", features = ["plotters", "html_reports"] }
bevy_egui = "0.27.0"
bevy_progress_bar = { version = "0.9.0" }

[features]
default = ["audio"]
audio = ["bevy/bevy_audio", "bevy/bevy_asset"]
tokio = ["dep:tokio", "dep:async-compat"]

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[lints.rust]
missing_docs = "warn"
