[package]
name = "bevy_flurx"
version = "0.8.3"
edition = "2021"
authors = ["notelm"]
categories = ["asynchronous", "game-development"]
description = "Allows you to write sequential description of processes involving delays, user input, and other waits."
keywords = ["game", "gamedev", "bevy", "async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/not-elm/bevy_flurx"

[[bench]]
name = "cmp_countup"
path = "benches/cmp_countup.rs"
harness = false

[[example]]
name = "side_effect"
path = "examples/side_effect.rs"
required-features = ["tokio", "effect"]

[[example]]
name = "undo_redo"
path = "examples/undo_redo.rs"
required-features = ["record"]

[[example]]
name = "switch_just_change"
path = "examples/bug_check/switch_just_change.rs"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [] }
futures-polling = "0.1.1"
futures-lite = "2.5.0"
pollster = "0.4.0"
pin-project = "1.1.7"
tokio = { version = "1.42.0", optional = true, features = ["sync", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = { version = "0.2.3", optional = true }

[dev-dependencies]
bevy = { version = "0.15.0" }
bevy_test_helper = { git = "https://github.com/not-elm/bevy_test_helper", branch = "v0.15.0" }
futures = "0.3.31"
criterion = { version = "0.5.1", features = ["plotters", "html_reports"] }
bevy_egui = "0.31.1"

[features]
default = []
audio = ["bevy/bevy_audio", "bevy/bevy_asset"]
tokio = ["dep:tokio", "dep:async-compat"]
record = []
effect = []
state = ["bevy/bevy_state"]

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[lints.rust]
missing_docs = "warn"

[package.metadata.docs.rs]
all-features = true
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
