[package]
name = "bevy_flurx"
version = "0.11.0-rc.1"
edition = "2021"
authors = ["notelm <elmprograminfo@gmail.com>"]
categories = ["asynchronous", "game-development"]
description = "Allows you to use coroutine in Bevy"
keywords = ["game", "gamedev", "bevy", "async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/not-elm/bevy_flurx"

[[bench]]
name = "single"
path = "benches/single.rs"
harness = false

[[bench]]
name = "repeat"
path = "benches/repeat.rs"
harness = false

[[example]]
name = "side_effect"
path = "examples/side_effect.rs"
required-features = ["tokio", "side-effect"]

[[example]]
name = "undo_redo"
path = "examples/undo_redo.rs"
required-features = ["record"]

[[example]]
name = "switch_just_change"
path = "examples/bug_check/switch_just_change.rs"

[dependencies]
bevy = { version = "0.16.0-rc.1", default-features = false, features = [
    "serialize",
] }
futures-polling = "0.1"
futures-lite = "2"
pollster = "0.4"
pin-project = "1"
itertools = "0.14"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", optional = true, features = ["sync", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = { version = "0.2", optional = true }

[dev-dependencies]
bevy = { version = "0.16.0-rc.1" }
bevy_test_helper = { git = "https://github.com/not-elm/bevy_test_helper", branch = "v0.16" }
futures = "0.3"
criterion = { version = "0.5", features = ["plotters", "html_reports"] }

[features]
default = []
audio = ["bevy/bevy_audio", "bevy/bevy_asset"]
tokio = ["dep:tokio", "dep:async-compat"]
record = []
side-effect = []
state = ["bevy/bevy_state"]

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[lints.rust]
missing_docs = "warn"

[package.metadata.docs.rs]
all-features = true
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
