[package]
name = "benches"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for Bevy engine"
publish = false
license = "MIT OR Apache-2.0"

[[bench]]
name = "cmp_countup"
path = "benches/cmp_countup.rs"
harness = false

[[bench]]
name = "cmp_repeat_countup"
path = "benches/cmp_repeat_countup.rs"
harness = false


[dependencies]
bevy = { version = "0.13.1", default-features = false }
bevy_flurx = { path = "../" }
criterion = "0.5.1"